Corrected pgsql2shp for -m option; added test
Postgres field column in mapping file was incorrectly compared with the name of the dbf field
Closes #4705

--- a/regress/core/Makefile.in
+++ b/regress/core/Makefile.in
@@ -67,6 +67,7 @@ TESTS = \
 	../loader/Latin1 \
 	../loader/Latin1-implicit \
 	../loader/mfile \
+	../dumper/mfiledmp \
 	../dumper/literalsrid \
 	../dumper/realtable \
 	../dumper/nullsintable \
